--- a/news.html
+++ b/news.html
@@ -5,7 +5,7 @@
 <style>
 body {
     background: #353535 no-repeat;
-    color: #4A4A4A;
+    color: #FFFFFF;
     font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 20px;
