--- a/news.html
+++ b/news.html
@@ -14,7 +14,9 @@ body {
 </head>
 <body>
 <!-- Note: Java's web renderer is pretty bad so you cannot get too fancy -->
-<h1>News</h1>
-<p>HII</p>
+<p>1. Klicka på create till vänster.</p>
+<p>2. Klicka på "Launch" nere i högra hörnet.</p>
+<p>3. Välj logga in med microsoft.</p>
+<p>4. Spelet startar. Det kan krascha men låt det bara tänka några sekunder så borde det fungera igen :D</p>
 </body>
 </html>
